# mdcheck-ng

./: Cargo.toml  Makefile  README.md  doc.nix  flake.nix  mdcheck-ng.toml  module.nix  options.md  package.nix  test.nix  units.nix
.github/workflows/: rust.yml
src/: config.rs  main.rs  md_dev.rs  ptr_hash.rs  renice.rs
src/config/: cron.rs  device.rs
systemd/: mdcheck-ng.service  mdcheck-ng.timer
