[package]
name = "mdcheck-ng"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
croner = "2.1.0"
ctrlc = { version = "3.4.5", features = ["termination"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
sysinfo = { version = "0.33.1", default-features = false, features = ["system"] }
